--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -2441,10 +2441,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "MQRMJWrgU5yS",
-        "outputId": "b304070d-c2d8-477b-c265-dd5ed54ac7fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b304070d-c2d8-477b-c265-dd5ed54ac7fa"
       },
       "source": [
         "type([1,2,3])"
@@ -2467,10 +2467,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "BkTCBWhsU5yS",
-        "outputId": "92c7f6d5-af7c-4165-f535-02144cc450c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "92c7f6d5-af7c-4165-f535-02144cc450c3"
       },
       "source": [
         "type(['Hello',17])"
@@ -2502,10 +2502,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "8m1KBuRNU5yS",
-        "outputId": "655b6916-bd28-4c17-a1d3-171a10594b4f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "655b6916-bd28-4c17-a1d3-171a10594b4f"
       },
       "source": [
         "type((1,2,3))"
@@ -2541,10 +2541,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "0N_HejMiU5yS",
-        "outputId": "75815fb0-4069-4c3d-dca4-639601ead2b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "75815fb0-4069-4c3d-dca4-639601ead2b9"
       },
       "source": [
         "type(range(10)) # Ranges are their own type, in Python 3.x.  Not in Python 2.x!"
@@ -2567,10 +2567,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "XzlQhL4eU5yS",
-        "outputId": "13096a81-10d2-420f-88ca-60122b2bba78",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "13096a81-10d2-420f-88ca-60122b2bba78"
       },
       "source": [
         "list(range(10)) # Let's see what's in the range.  Note it starts at zero!  Where does it stop?"
@@ -2602,10 +2602,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "fpHHkb82U5yT",
-        "outputId": "b1b34fc2-1e07-4947-e38c-3a4ce75a9fcb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b1b34fc2-1e07-4947-e38c-3a4ce75a9fcb"
       },
       "source": [
         "list(range(3,10))"
@@ -2628,10 +2628,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "O5A8XZFxU5yT",
-        "outputId": "5485147d-710a-4540-988a-306f092c2dfa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5485147d-710a-4540-988a-306f092c2dfa"
       },
       "source": [
         "list(range(-4,5))"
@@ -2672,10 +2672,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-xjzFOxWU5yT",
-        "outputId": "9ee8aa9e-0273-47cb-b5cb-db4733e4a5b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9ee8aa9e-0273-47cb-b5cb-db4733e4a5b7"
       },
       "source": [
         "len([2,4,6])"
@@ -2698,10 +2698,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "1IG2dOJeU5yT",
-        "outputId": "fd7f1bec-c8f9-43df-8bf0-0ff93572d4f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fd7f1bec-c8f9-43df-8bf0-0ff93572d4f7"
       },
       "source": [
         "len(range(10))  # The len command can deal with lists and ranges.  No need to convert."
@@ -2724,10 +2724,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "N9lCN8-bU5yT",
-        "outputId": "9793dd62-c437-49b5-bffa-4443d5ac68e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9793dd62-c437-49b5-bffa-4443d5ac68e8"
       },
       "source": [
         "len(range(10,100)) # Can you figure out the length, before evaluating?"
@@ -2759,10 +2759,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "RjmZQRmtU5yT",
-        "outputId": "9f7057d6-9ad6-4d71-9781-eee13f214706",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9f7057d6-9ad6-4d71-9781-eee13f214706"
       },
       "source": [
         "list(range(1,10,2))"
@@ -2785,10 +2785,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "UX91kNpoU5yT",
-        "outputId": "e6c3deb7-b187-4b3c-8393-a8a88e02064f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e6c3deb7-b187-4b3c-8393-a8a88e02064f"
       },
       "source": [
         "list(range(11,30,2))"
@@ -2811,10 +2811,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "cU6TYerPU5yU",
-        "outputId": "2132e5c2-df63-484c-84c0-35ad3f6a38e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2132e5c2-df63-484c-84c0-35ad3f6a38e8"
       },
       "source": [
         "list(range(-4,5,3))"
@@ -2837,10 +2837,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "_RueWhdHU5yU",
-        "outputId": "bd6f6237-6aac-4687-c39d-5949b0815224",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bd6f6237-6aac-4687-c39d-5949b0815224"
       },
       "source": [
         "list(range(10,100,17))"
@@ -2872,10 +2872,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "LVm1djsTU5yU",
-        "outputId": "2e955db9-a975-4715-8da0-33283397871a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2e955db9-a975-4715-8da0-33283397871a"
       },
       "source": [
         "list(range(10,0,-1))"
@@ -2907,10 +2907,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "roA4gLoXU5yU",
-        "outputId": "7d7b71bb-5f56-4840-814b-2a8fc98989a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7d7b71bb-5f56-4840-814b-2a8fc98989a3"
       },
       "source": [
         "list(range(10,100,7))  # What list will this create?  It won't answer the question..."
@@ -2933,10 +2933,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "jybN-evPU5yU",
-        "outputId": "0f50c792-276f-4621-8ea8-ee6380abcccf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0f50c792-276f-4621-8ea8-ee6380abcccf"
       },
       "source": [
         "list(range(14,100,7))  # Starting at 14 gives the multiples of 7."
@@ -2959,10 +2959,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "BdvLmGljU5yU",
-        "outputId": "73717ab8-9bee-4f42-f7ce-d55a7712ac5f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "73717ab8-9bee-4f42-f7ce-d55a7712ac5f"
       },
       "source": [
         "len(range(14,100,7))  # Gives the length of the list, and answers the question!"
@@ -3002,11 +3002,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "4HKDVcFVU5yU",
-        "outputId": "840bedc5-6938-4d80-8578-a8e98069c70c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 130
-        }
+        },
+        "outputId": "840bedc5-6938-4d80-8578-a8e98069c70c"
       },
       "source": [
         "#  Use this space to work on the exercises.\n",
@@ -3049,10 +3049,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "mwdKBi3kU5yV",
-        "outputId": "666b1c71-93c3-4633-9800-30a9abe0b9ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "666b1c71-93c3-4633-9800-30a9abe0b9ec"
       },
       "source": [
         "for n in [1,2,3,4,5]:\n",
@@ -3077,10 +3077,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "HC031A4LU5yV",
-        "outputId": "593b72e8-7fdb-436a-a4ec-d3b42e63e259",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "593b72e8-7fdb-436a-a4ec-d3b42e63e259"
       },
       "source": [
         "for s in ['I','Am','Python']:\n",
@@ -3112,10 +3112,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "UY4izCfvU5yV",
-        "outputId": "233ec298-c166-4d94-d85b-71a4a8874e74",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "233ec298-c166-4d94-d85b-71a4a8874e74"
       },
       "source": [
         "n = 1\n",
@@ -3168,10 +3168,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "vOyvFfJcU5yW",
-        "outputId": "6aab6d06-94a6-4b9f-9d18-401ca57cb027",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6aab6d06-94a6-4b9f-9d18-401ca57cb027"
       },
       "source": [
         "P = 1\n",
@@ -3203,10 +3203,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "C6bVCkZdU5yW",
-        "outputId": "3dd6aa8e-20f3-4270-dbd5-cb215ba851c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3dd6aa8e-20f3-4270-dbd5-cb215ba851c1"
       },
       "source": [
         "P = 1\n",
@@ -3244,10 +3244,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wUu0BH2lU5yW",
-        "outputId": "a09611cb-cdfb-4988-895c-d4bc1421493d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a09611cb-cdfb-4988-895c-d4bc1421493d"
       },
       "source": [
         "print(\"My favorite number is\",17)"
@@ -3462,15 +3462,7 @@
         "#    sum = 0\n",
         "#    for i in range(1,10000):\n",
         "#     sum += 1/(i**4)\n",
-        "#    print(pitoforth/sum)\n",
-        "#\n",
-        "#\n",
-        "#\n",
-        "#\n",
-        "#\n",
-        "#\n",
-        "#\n",
-        "#"
+        "#    print(pitoforth/sum)"
       ],
       "execution_count": null,
       "outputs": []
@@ -3518,13 +3510,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PoGqUlqoU5yY"
+        "id": "PoGqUlqoU5yY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b9d708b6-aef9-4f6d-b60a-15fb48007748"
       },
       "source": [
-        "#  Start your explorations here!"
+        "X = 957\n",
+        "g = 31\n",
+        "i = 0\n",
+        "while i < 1000000:\n",
+        "  g = (g + (X/g))/2\n",
+        "  i += 1\n",
+        "\n",
+        "print(g)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30.93541659651604\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3551,13 +3562,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cH0ApCftU5yY"
+        "id": "cH0ApCftU5yY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ed0aa419-d568-4ed5-b434-048c44f75220"
       },
       "source": [
-        "#  Approximate e here."
+        "i = 0\n",
+        "e = 0\n",
+        "fact = 1\n",
+        "while i < 20:\n",
+        "  e += (1**(i))*(1/fact)\n",
+        "  i += 1\n",
+        "  fact *= i\n",
+        "\n",
+        "print(e)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.7182818284590455\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3577,13 +3608,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wYlwMQxBU5yY"
+        "id": "wYlwMQxBU5yY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "60f079da-cc3e-4bc6-c4b3-1212c9e280bc"
       },
       "source": [
-        "#  Approximate pi here!"
+        "#1\n",
+        "sum = 0\n",
+        "x = list(range(0,1000000))\n",
+        "\n",
+        "for i in x:\n",
+        "  x[i] = ((-1)**i)/((2*i)+1)\n",
+        "\n",
+        "for i in x:\n",
+        "  sum += i\n",
+        "\n",
+        "print(sum*4)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.1415916535897743\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3603,13 +3656,47 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "71EwcYnMU5yY"
+        "id": "71EwcYnMU5yY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c7bcfcc2-03ff-49dd-ece9-347861633a75"
       },
       "source": [
-        "#  Approximate pi more quickly here!"
+        "sum1 = 0\n",
+        "sum2 = 0\n",
+        "series = list(range(0,10000))\n",
+        "x = 1/5\n",
+        "\n",
+        "#atan(1/5)\n",
+        "for i in series:\n",
+        "  series[i] = ((-1)**i)*(x**((2*i)+1))/((2*i)+1)\n",
+        "  #print(series[i])\n",
+        "for i in series:\n",
+        "  sum1 += i\n",
+        "\n",
+        "series2 = list(range(0,100))\n",
+        "y = 1/239\n",
+        "\n",
+        "#atan(1/239)\n",
+        "for i in series2:\n",
+        "  series2[i] = ((-1)**i)*(y**((2*i)+1))/((2*i)+1)\n",
+        "for i in series2:\n",
+        "  sum2 += i\n",
+        "\n",
+        "pi = 4*((4*sum1)-sum2)\n",
+        "print(pi)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.141592653589794\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3637,14 +3724,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uJZZ9M_PU5yZ"
+        "id": "uJZZ9M_PU5yZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2fa54c4d-78c0-4aa7-f90e-67f045830347"
       },
       "source": [
         "from mpmath import *\n",
         "print(mp)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mpmath settings:\n",
+            "  mp.prec = 169               [default: 53]\n",
+            "  mp.dps = 50                 [default: 15]\n",
+            "  mp.trap_complex = False     [default: False]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3658,14 +3760,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "f2aNKEWeU5yZ"
+        "id": "f2aNKEWeU5yZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "97866bee-e6ad-4574-c06d-20e515de4128"
       },
       "source": [
         "mp.dps = 50 # Let's try 50 digits precision to start.\n",
         "print(mp)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mpmath settings:\n",
+            "  mp.prec = 169               [default: 53]\n",
+            "  mp.dps = 50                 [default: 15]\n",
+            "  mp.trap_complex = False     [default: False]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3680,35 +3797,80 @@
       "cell_type": "code",
       "metadata": {
         "scrolled": true,
-        "id": "IynhKMaLU5yZ"
+        "id": "IynhKMaLU5yZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "87856f27-efd9-4c7b-9e3e-66b6c1849c35"
       },
       "source": [
         "sqrt(2)  # mpf(...) stands for an mp-float.  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "mpf('1.4142135623730950488016887242096980785696718753769468')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "quMwWJJ3U5yZ"
+        "id": "quMwWJJ3U5yZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5580a12c-f0c0-483d-faaf-ac5db93108d7"
       },
       "source": [
         "type(sqrt(2)) # mpmath stores numbers in its own types!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "mpmath.ctx_mp_python.mpf"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3WEkkeNNU5yZ"
+        "id": "3WEkkeNNU5yZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ba44717f-e9b3-4345-f350-913ef81f3af7"
       },
       "source": [
         "4*mp.atan(1) # mpmath has the arctan built in.  This should be pretty close to pi!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "mpf('3.1415926535897932384626433832795028841971693993751068')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3722,13 +3884,44 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ulLOs22VU5yZ"
+        "id": "ulLOs22VU5yZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "92da9d5c-b719-40bf-84f9-d2975f718199"
       },
       "source": [
-        "#  Explore and experiment."
+        "import math \n",
+        "#P(2) = 8\n",
+        "#p(2) = 4(2**(1/2))\n",
+        "\n",
+        "smallp = list(range(1,11))\n",
+        "bigp = list(range(1,11))\n",
+        "\n",
+        "smallp[1] = 4*(sqrt(2))\n",
+        "bigp[1] = 8\n",
+        "\n",
+        "i = 1\n",
+        "\n",
+        "while i < 9:\n",
+        "  bigp[i+1] = (2*smallp[i]*bigp[i])/(smallp[i]+bigp[i])\n",
+        "  smallp[i+1] = sqrt(smallp[i]*bigp[i+1])\n",
+        "  i += 1\n",
+        "\n",
+        "print(smallp[9])\n",
+        "print(bigp[9])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6.2831754505543194012577085254038374787985617171497\n",
+            "6.2832050205136178935273793169853200235845469162052\n"
+          ]
+        }
+      ]
     }
   ]
 }
