--- a/Midterm_Programming.ipynb
+++ b/Midterm_Programming.ipynb
@@ -88,18 +88,29 @@
       "metadata": {
         "id": "Qxs3rYzoS7UM"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def four_divisors(n):\n",
+        "  L = [] #empty list for all naturals\n",
+        "  L2 = [] #empty list to return later\n",
+        "  i = 1\n",
+        "  \n",
+        "  #making a list of naturals from 1 to 10\n",
+        "  while i < n:\n",
+        "    L[i].append(n)\n",
+        "\n",
+        "  #make a for loop checking if all the conditions apply\n",
+        "  #append to L2 for all the numbers that apply and return the list.\n",
+        "\n"
       ],
       "metadata": {
         "id": "fEmoCVqTVY6f"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -143,10 +154,10 @@
       ],
       "metadata": {
         "id": "J71lp-NcUcl_",
-        "outputId": "3e28678f-b845-446f-af7d-012d901a697a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3e28678f-b845-446f-af7d-012d901a697a"
       },
       "execution_count": 17,
       "outputs": [
