--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -113,10 +113,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "n8VNDo3Ro1Nh",
-        "outputId": "0bb7cc8e-9999-4392-deeb-63f3b3a5f694",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0bb7cc8e-9999-4392-deeb-63f3b3a5f694"
       },
       "source": [
         "is_prime(10001)"
@@ -146,10 +146,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "EwsTzmDJo1Nh",
-        "outputId": "6e37fd90-8bb2-490e-be49-8b135a9885f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6e37fd90-8bb2-490e-be49-8b135a9885f9"
       },
       "source": [
         "is_prime(101)"
@@ -210,10 +210,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "yky_CASQo1Ni",
-        "outputId": "8482b41d-fa4c-4aa4-8c25-5a15fd0e5a4f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8482b41d-fa4c-4aa4-8c25-5a15fd0e5a4f"
       },
       "source": [
         "sqrt(1000)"
@@ -264,10 +264,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "JCOkoqBJo1Nj",
-        "outputId": "b4706683-7c48-4865-93e5-4028a109b734",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b4706683-7c48-4865-93e5-4028a109b734"
       },
       "source": [
         "math.sqrt(1000)"
@@ -290,11 +290,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "1wHHxCBvo1Nj",
-        "outputId": "3a46935d-0d77-4f94-ab82-9fadf10d4b4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 165
-        }
+        },
+        "outputId": "3a46935d-0d77-4f94-ab82-9fadf10d4b4a"
       },
       "source": [
         "factorial(10)  # This will cause an error!"
@@ -318,10 +318,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "q3_f65bdo1Nj",
-        "outputId": "8d97cd79-216f-4766-9746-ce0b9545ff2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8d97cd79-216f-4766-9746-ce0b9545ff2e"
       },
       "source": [
         "math.factorial(10)  # This is ok, since the math package comes with a function called factorial."
@@ -398,10 +398,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "MYRn_kwAo1Nk",
-        "outputId": "829f3481-1dc8-4557-f6d3-e39c8e4c0b01",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "829f3481-1dc8-4557-f6d3-e39c8e4c0b01"
       },
       "source": [
         "is_prime_fast(1000003)"
@@ -424,10 +424,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "CycTNs3Yo1Nk",
-        "outputId": "4bbc3cd5-6ced-4b97-9fe8-f12c1025a48d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4bbc3cd5-6ced-4b97-9fe8-f12c1025a48d"
       },
       "source": [
         "is_prime_slow(1000003)"
@@ -476,10 +476,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "9362eqX8o1Nk",
-        "outputId": "d9a649b6-347c-4059-cfb2-dd783a4717e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d9a649b6-347c-4059-cfb2-dd783a4717e5"
       },
       "source": [
         "%timeit is_prime_fast(1000003)"
@@ -499,10 +499,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "GlQqgs6Fo1Nk",
-        "outputId": "70afc874-ed83-4105-bfa7-86b79f75c422",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "70afc874-ed83-4105-bfa7-86b79f75c422"
       },
       "source": [
         "%timeit is_prime_slow(1000003)"
@@ -522,10 +522,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "MMoNyEsOo1Nk",
-        "outputId": "f6fbcb5c-6aef-4e30-f603-9815c375d6c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f6fbcb5c-6aef-4e30-f603-9815c375d6c6"
       },
       "source": [
         "%timeit is_prime(1000003)"
@@ -554,10 +554,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "hPOknCuUo1Nk",
-        "outputId": "e1f2eb34-b5e6-4b29-aab9-7177b6f7d7db",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e1f2eb34-b5e6-4b29-aab9-7177b6f7d7db"
       },
       "source": [
         "is_prime_fast(10000000000037)  # Don't try this with `is_prime` unless you want to wait for a long time!"
@@ -608,10 +608,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wQX1FSObo1Nl",
-        "outputId": "63420070-3778-4dce-ccc8-a417a4f6cf57",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "63420070-3778-4dce-ccc8-a417a4f6cf57"
       },
       "source": [
         "dis(is_prime_fast)"
@@ -672,10 +672,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "M_T0805ko1Nl",
-        "outputId": "80433871-e1cb-4734-c6f6-b717a3744080",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "80433871-e1cb-4734-c6f6-b717a3744080"
       },
       "source": [
         "dis(is_prime_slow)"
@@ -733,10 +733,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "1mendW3Uo1Nl",
-        "outputId": "8c5ba43f-91dc-475c-d3d5-d6a1ab4ca057",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8c5ba43f-91dc-475c-d3d5-d6a1ab4ca057"
       },
       "source": [
         "is_prime_fast(10**14 + 37) # This might get a bit of delay."
@@ -822,11 +822,11 @@
         "%timeit is_prime_fast(1000003)"
       ],
       "metadata": {
-        "id": "qFjSZhwsO_Y1",
-        "outputId": "1ea3096a-1313-4aef-a659-c4f5b527f66d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qFjSZhwsO_Y1",
+        "outputId": "1ea3096a-1313-4aef-a659-c4f5b527f66d"
       },
       "execution_count": 31,
       "outputs": [
@@ -874,11 +874,11 @@
         "%timeit is_prime_fast(514229)"
       ],
       "metadata": {
-        "id": "h4UZ7dRFSYeV",
-        "outputId": "02d1f825-89d0-4887-9434-aef943eee872",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "h4UZ7dRFSYeV",
+        "outputId": "02d1f825-89d0-4887-9434-aef943eee872"
       },
       "execution_count": 33,
       "outputs": [
@@ -921,7 +921,7 @@
         "    Uses an inaccurate technique if number is too big.\n",
         "  '''\n",
         "\n",
-        "  if (n**(.5))%1 == 0:\n",
+        "  if (n**(.5))%1 == 0: #uses the square root function and checks if it has decimals\n",
         "    return True\n",
         "  else:\n",
         "    return False\n",
@@ -931,11 +931,11 @@
         "%timeit is_square(522729)"
       ],
       "metadata": {
-        "id": "DR5eVZPBZVt-",
-        "outputId": "0b364d86-5fc5-4942-dc4e-ce2f00964340",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DR5eVZPBZVt-",
+        "outputId": "0b364d86-5fc5-4942-dc4e-ce2f00964340"
       },
       "execution_count": 41,
       "outputs": [
@@ -959,20 +959,61 @@
         "def is_square(n):\n",
         "  '''\n",
         "    Checks whether the argument n is a perfect square.\n",
-        "    Uses an inaccurate technique if number is too big.\n",
+        "    Accurate technique but takes longer\n",
         "  '''\n",
         "\n",
-        "  if (n**(.5))%1 == 0:\n",
-        "    return True\n",
-        "  else:\n",
-        "    return False\n",
+        "  j = ((n**(.5))*.9999999999999999999999999999999)//1   #starts the loop at a point under but close to the square root of n\n",
+        "  root = (n**(.5)) + 1    #putting a cap on the loop a little higher than the square root of n\n",
+        "  while j < root:   #looping from j to root acting as a delta\n",
+        "      if j**2 == n:\n",
+        "          return True\n",
+        "      j = j + 1\n",
+        "\n",
+        "  return False\n",
         "\n",
         "%timeit is_square(295685133187890625)\n",
         "%timeit is_square(7942909129)\n",
         "%timeit is_square(522729)"
       ],
       "metadata": {
-        "id": "VuP9S0IVb0zU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VuP9S0IVb0zU",
+        "outputId": "d642da58-c062-484c-8bef-78fa8728b07b"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The slowest run took 10.73 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+            "1000000 loops, best of 5: 997 ns per loop\n",
+            "The slowest run took 7.78 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+            "1000000 loops, best of 5: 832 ns per loop\n",
+            "The slowest run took 7.36 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+            "1000000 loops, best of 5: 735 ns per loop\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The first one was faster but not very accurate. Fastest was 328 nanoseconds per loop."
+      ],
+      "metadata": {
+        "id": "zPMM0Ehl6fOT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ccVaEfJ9p5si"
       },
       "execution_count": null,
       "outputs": []
